--- a/math250/week13.html
+++ b/math250/week13.html
@@ -35,7 +35,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> What is the geometric representation of eigenvectors associated with real eigenvalues in the phase plane?
+    <li> What is the geometric representation of eigenvectors associated with real eigenvalues in the phase plane? Can you explain why this is the representaion?
     <li> What sorts of pictures in the phase plane do we see when we have a system with complex eigenvalues?
     <li> Match each initial value problem with the phase plane plot of its solution. (The arrows on the curves indicate how the solution point moves as \(t\) increases.)
       <table>
@@ -135,7 +135,15 @@
       <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='right'> C)<img src="./wk12_ex8_ppC.png" width=300></td></tr>
       <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='right'> D)<img src="./wk12_ex8_ppA.png" width=300></td></tr>
     </table>
-      <P><a href="./1stOrderSystemIVPS.pdf">Solutions</a>
+
+    <details>
+      <summary>video solution</summary>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_uv3x0g17&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_1qrs4xmv" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+        <details>
+          <summary>more solutions</summary>
+            <P><a href="./1stOrderSystemIVPS.pdf">Solutions</a>
+            </details>
+      </details>
 </div>
 
 <h2>Example 2 - </h2>
@@ -307,6 +315,12 @@
       <li>Classify the equilibrium solutions you have found.
       <li>Sketch a phase plane with some solutions. Describe how the solutions relate back to the topic of bacteria in a petri dish.
     </ol>
+  </div>
+
+  <h2>Example 11 - 3 Tank mixing problem </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example 11</button>
+  <div id="ex11" class="collapse">
+  <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_gjzv0h5l&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_7vuidb6j" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </div>
 
 </body>
