--- a/math250/week13.html
+++ b/math250/week13.html
@@ -220,7 +220,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
 
-<p> In example 5 above, and for mass-spring systems in general, we have a way to classify the behavior of the spring using jus the values of \(m,b,k\) before solving the DE.
+<p> In example 5 above, and for mass-spring systems in general, we have a way to classify the behavior of the spring using just the values of \(m,b,k\) before solving the DE.
   Can we do that with a general system of 2 first order linear differential equations?<br>
 <P> Consider the system
   $$\vec{x}' = \begin{bmatrix}a & b \\ c & d \end{bmatrix} \vec{x}.$$
