--- a/math250/week14.html
+++ b/math250/week14.html
@@ -35,8 +35,8 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> Classify the (0,0) equilibrium solution of \(\vec{x}' = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).
-    <li> Classify the (0,0) equilibrium solution of \(\vec{x}' = \begin{bmatrix} 0 & -2 \\ 3 & -4\end{bmatrix} \vec{x}\).
+    <li> Classify the (0,0) equilibrium solution of \(\vec{x} = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).
+    <li>
     </ol>
  </div>
 
@@ -70,7 +70,7 @@
   <li>Consider a transformation to polar coordinates for this system.
     $$r^2 = x^2 + y^2$$
     $$\tan\theta = \frac{y}{x}$$
-    Find an equation for \(r'\) and show \(\theta' = 1\).
+    Find an equation for \(r'\) and show \(theta' = 1\).
   <li>Analyse the equilibrium solution at \(r=0 \Leftrightarrow (0,0)_{x,y}\) in terms of \(a\).
 </ol>
 
@@ -116,21 +116,19 @@
   </ol>
 </div>
 
-<!--
-<h2>Example 5 - mass-spring </h2>
+
+<h2>Example 5 - More equilibria </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
 <div id="ex5" class="collapse">
-  <P> Consider a mass-spring system modeled with \(2x'' + x' + 3x = 0\).
-    <ol type='1'>
-      <li>What is the general solution to this DE?
-      <li>Is the spring overdamped, underdamped, or critically damped?
-      <li>Write this 2nd order DE as a system of first order equations.
-      <li>Sketch/plot a phase plane for the system. What do the horizontal and vertical axes represent?
-      <li>(0,0) is an equilibrium solution. What is the physical interpretation of this equilibrium solution?
-      <li>Find the eigenvalues of the matrix from your answer to question 3) above? What is the name given to the equilibrium solution?
-    </ol>
+  <P> Find and classify the equilibrium solutions to the system below.
+    $$ x' = y^2 -1 $$
+    $$ y' = x^3 - y$$
+    <details>
+      <summary>video</summary>
+      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_ihsw6utg&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_3qze97wr" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+    </details>
 </div>
-
+<!--
 <h2>Example 6 - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
