--- a/math154/calculus1_integration_review.html
+++ b/math154/calculus1_integration_review.html
@@ -90,8 +90,9 @@ $(function () {
   and draw a figure/graph that illustrates the lower limit.
 <br><br>
 <li> A bicyclist is pedaling along a straight road for one hour with a velocity shown in the figure below.
+  \(v\) is in km/hr and \(t\) is in minutes.
   She starts out 5 kilometers from the lake and positive velocities take her toward the lake.<br>
-  <img src="./HH_bike_lake.jpg" width=400><br>
+  <img src="./HHbikelake.png" width=350><br>
   <ol type="a">
     <li>Does the cyclist ever turn around? If so, when?
     <li>When is she going the fastest? How fast is she going then? Toward the lake or away?
