--- a/math250/week14.html
+++ b/math250/week14.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body  style="width: 800px; padding-left: 1cm; padding-bottom: 10cm">
+  <body  style="width: 650px; padding-left: 1cm; padding-bottom: 10cm">
 
   <h1>Math 250 - Nonlinear systems of DE </h1>
 
@@ -147,18 +147,21 @@
 <div id="ex4" class="collapse">
 <P>
   <ol type='1'>
-    <li> Find a general solution to \(\frac{dy}{dx} = \frac{1}{x^2 -1}\).
-    <li> Find a particular solution to \(\frac{dx}{dt} = \frac{1}{1 + t^2}, x(0) = 0\).
-    <li> Find a general solution \(x \frac{dy}{dx} + y = x^3\).
-    <li> Find a basis for the nullspace of the matrix \(A = \begin{bmatrix}-1 & 1 & 2 & 4\\2 & 0 & 1 & -7\end{bmatrix}\).
-    <li> Use Gaussian Elimination to find the inverse of \(A = \begin{bmatrix} 1 & 3 \\ 2 & 7\end{bmatrix}\). Verify your solution by using a known formula for the inverse of a 2x2 matrix.
-    <li> Use the method of undetermined coefficients to find a solution to \(y'' - 4y' - 12y = 3e^{5t}\).
-    <li> Let \(A = \begin{bmatrix} 1 & -2 \\ 2 & 1\end{bmatrix}\) and \(\vec{x} = \begin{bmatrix} x_1\\x_2 \end{bmatrix}\). Find the general solution to \(\vec{x}' = A \vec{x}\).
-    <li> Find a solution to \(x''' - 4x' = 0\).
+    <li> Find a general solution to \(\frac{dy}{dx} = \frac{1}{x^2 -1}\).<br>
+    <li> Find a particular solution to \(\frac{dx}{dt} = \frac{1}{1 + t^2}, x(0) = 0\).<br>
+    <li> Find a general solution \(x \frac{dy}{dx} + y = x^3\).<br>
+    <li> Find a basis for the nullspace of the matrix \(A = \begin{bmatrix}-1 & 1 & 2 & 4\\2 & 0 & 1 & -7\end{bmatrix}\).<br>
+    <li> Use Gaussian Elimination to find the inverse of \(A = \begin{bmatrix} 1 & 3 \\ 2 & 7\end{bmatrix}\).
+      Verify your solution by using a known formula for the inverse of a 2x2 matrix.<br>
+    <li> Use Laplace transforms to solve \(y'' + y = \sin t, y(0)=1, y'(0)=0\).<br>
+    <li> Use the method of undetermined coefficients to find a solution to \(y'' - 4y' - 12y = 3e^{5t}\).<br>
+    <li> Let \(A = \begin{bmatrix} 1 & -2 \\ 2 & 1\end{bmatrix}\) and \(\vec{x} = \begin{bmatrix} x_1\\x_2 \end{bmatrix}\).
+      Find the general solution to \(\vec{x}' = A \vec{x}\).<br>
+    <li> Find a solution to \(x''' - 4x' = 0\).<br>
     <li> How many solutions are there to the system below?
       $$1x - y + 2z = -3$$
       $$4x + 4y - 2z = 1 $$
-      $$-2x + 2y - 4z = 6$$
+      $$-2x + 2y - 4z = 6$$<br>
     <li>Consider a 100 gallon water tank that contains fresh water. Saltwater with concentration 2 lbs per gallon is pumped in at a rate of 10 gallons per minute.
    The saltwater is perfectly mixed and flows out at a rate of 10 gallons per minute. How much time needs to pass before there is 10 lbs of salt in the tank?
 
